Made disabled remove button on permissions invisible (for removing owner's permission) using CSS. Modification to form invalid message on study terms page (issue #338) (previously amended in r2932).

--- a/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
+++ b/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
@@ -405,3 +405,8 @@ ul {
     
     vertical-align: top;
 }
+
+#editable-list-of-administrators-container .repeated-element button.xforms-readonly {
+	display:none;
+	visibility:hidden;
+}
